# devcontainer-spec-kit

./: README.md  setup.sh
.devcontainer/: README_host-setup.md  compose.yml
.devcontainer/spec-kit/: Dockerfile  devcontainer.json  postCreateCommand.sh  pyproject.toml
